force-app/main/default/objects/DmlUtilityLog__c/DmlUtilityLog__c.object-meta.xml
<CustomObject>
    <label>DmlUtilityLog</label>
    <nameField>
        <label>DmlUtilityLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DmlUtilityLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>