force-app/main/default/objects/DmlUtilityLog__c/fields/Async__c.field-meta.xml
<CustomField>
    <fullName>Async__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Async</label>
    <type>Checkbox</type>
</CustomField>