force-app/main/default/objects/DmlUtilityLog__c/fields/ExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ExecutionId__c</fullName>
    <label>ExecutionId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>