force-app/main/default/objects/DmlUtilityLog__c/fields/FailedRecordCount__c.field-meta.xml
<CustomField>
    <fullName>FailedRecordCount__c</fullName>
    <label>FailedRecordCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>