force-app/main/default/objects/DmlUtilityLog__c/fields/FirstErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>FirstErrorMessage__c</fullName>
    <label>FirstErrorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>