force-app/main/default/objects/DmlUtilityLog__c/fields/IsLightweight__c.field-meta.xml
<CustomField>
    <fullName>IsLightweight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLightweight</label>
    <type>Checkbox</type>
</CustomField>