force-app/main/default/objects/DmlUtilityLog__c/fields/MaxRetries__c.field-meta.xml
<CustomField>
    <fullName>MaxRetries__c</fullName>
    <label>MaxRetries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>