force-app/main/default/objects/DmlUtilityLog__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DO_INSERT, DO_UPDATE, DO_DELETE, DO_UPSERT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>