force-app/main/default/objects/DmlUtilityLog__c/fields/PartialRetryEnable__c.field-meta.xml
<CustomField>
    <fullName>PartialRetryEnable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartialRetryEnable</label>
    <type>Checkbox</type>
</CustomField>