force-app/main/default/objects/DmlUtilityLog__c/fields/PartialRetryEnabled__c.field-meta.xml
<CustomField>
    <fullName>PartialRetryEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PartialRetryEnabled</label>
    <type>Checkbox</type>
</CustomField>