force-app/main/default/objects/DmlUtilityLog__c/fields/RetryAttempt__c.field-meta.xml
<CustomField>
    <fullName>RetryAttempt__c</fullName>
    <label>RetryAttempt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>