force-app/main/default/objects/DmlUtilityLog__c/fields/SuppressedHookFailures__c.field-meta.xml
<CustomField>
    <fullName>SuppressedHookFailures__c</fullName>
    <label>SuppressedHookFailures</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>